<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#4A3B3B"
    tools:context="com.metagain.frontend.view.LogIn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="332dp"
        android:layout_height="73dp"
        android:fontFamily="@font/krona_one"
        android:text="MetAgain"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#031265"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="103dp"
        android:layout_height="57dp"
        android:backgroundTint="#0E69AF"
        android:text="Login"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:backgroundTint="#292424"
        android:ems="10"
        android:foregroundTint="#4E4E4E"
        android:hint="Username"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#555454"
        android:textColorLink="#7C7B7B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:backgroundTint="#292424"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#60C4EA"
        android:textColorHint="#555454"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.Material3.Button.TextButton.Snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrieren"
        android:textColor="#0E69AF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="122dp"
        android:src="@drawable/bildschirmfoto_2023_06_06_um_16_32_34"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>